apps/internal/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: svc-media
  labels:
    app: sonarr
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: http
