apps/internal/media/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: svc-media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx-internal
  rules:
    - host: sonarr.intern.rohrbom.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
  tls:
    - hosts:
        - sonarr.intern.rohrbom.be
      secretName: sonarr-tls
